<resources>
    <string name="app_name">Popular Movies</string>
    <string name="settings">Settings</string>
    <string name="error">Ops, something went wrong</string>
    <string name="error_dialog_msg">Ops, something went wrong. Check your internet connection and try again</string>
    <string name="error_dialog_title">Error</string>
    <string name="error_dialog_button">retry</string>
    <string name="reviews">Reviews:</string>
    <string name="trailer">Trailer:</string>
    <string name="show_me">Show me:</string>
    <string name="most_popular">most popular</string>
    <string name="highest_rated">highest-rated</string>
    <string name="my_favorites">my favorites</string>
    <string name="settings_dialog_accept">accept</string>
    <string name="settings_dialog_dismiss">dismiss</string>
    <string name="favorite">Favorite:</string>
</resources>
