<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="presenter"
            type="abe.appsfactory.nanodegree.popular_movies.presenter.SettingsPresenter"/>
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:background="@android:color/white"
                  android:orientation="vertical">

        <TextView
            style="@style/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/space_normal"
            android:text="@string/settings"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minWidth="@dimen/settings_dialog_min_width"
            android:orientation="vertical"
            android:padding="@dimen/space_normal">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_normal"
                android:text="@string/show_me"/>

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/pop"
                    android:checked="@={presenter.mPopular}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/most_popular"/>

                <RadioButton
                    android:checked="@={presenter.mRated}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/highest_rated"/>

                <RadioButton
                    android:checked="@={presenter.mFavorites}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/my_favorites"/>
            </RadioGroup>


            <android.support.v7.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_normal"
                android:text="@string/settings_dialog_accept"
                android:onClick="@{() -> presenter.onAccept(context)}"
                android:textColor="@android:color/white"
                app:backgroundTint="@color/colorPrimary"/>

            <android.support.v7.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_dialog_dismiss"
                android:onClick="@{() -> presenter.onDismiss()}"
                android:textColor="@android:color/white"
                app:backgroundTint="@color/colorPrimary"/>
        </LinearLayout>
    </LinearLayout>
</layout>
